Batch benchmark script.
Signed-off-by: 疯魔慕薇 <kfanjian@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 ansible/hosts
+k8s/apparate/scf-2g.yaml
+k8s/docker/scf-2g.yaml
+k8s/nydus/scf-2g.yaml
+k8s/stargz/scf-2g.yaml
